# coralapp

./: README.md  cmake_install.cmake  coral.code-workspace
.github/workflows/: github-pages.yml  windows-build.yaml
coral/: CMakeLists.txt  Makefile
coral-electron/: .npmignore  main.js  package-lock.json  package.json
coral-electron/renderer/: dev.html  dev.js  index.html  renderer.js
coral/conf/: config-linux.json  config-windows.json  config.json
coral/lib/: libwhisper.so.1
coral/scripts/: AppRun  build.sh  check-and-install-fuse.sh  collect-libs-.sh  collect-libs.sh  coral.desktop  create_deb_pkg.sh  package.json  postinstall.sh  removePermissions.sh  run-appimage.sh
coral/scripts/python/: generate_wave_icons.py
coral/src/: A11yInjector.cpp  ClipboardOwner.cpp  ClipboardOwner.h  Config.cpp  Config.h  ConfigReloadThread.cpp  InjectorThread.cpp  KeyDetector.cpp  KeyDetector.h  Logger.cpp  Logger.h  Makefile  Recorder.cpp  Recorder.cpp.backup  Recorder.h  RecorderThread.cpp  RecorderThread.h  TextEvent.h  TextInjector.cpp  TextInjector.h  TextUtils.cpp  TextUtils.h  TranscriberThread.cpp  UInputInjector.cpp  Utils.cpp  Utils.h  WaylandInjector.cpp  WaylandSession.cpp  WaylandSession.h  X11WindowUtils.cpp  concurrentQueue.h  main.cpp  stderrSilencer.cpp  version.h  version.h.in  version.rc.in
coral/test/: TestA11yInjector.cpp  TestAudioEvent.cpp  TestConfig.cpp  TestDoubleTapDetectionFSM.cpp  TestDoubleTapKeyDetector.cpp  TestKeyDetector.cpp  TestRecorderThread.cpp  TestTextInjector.cpp  TestVocal.cpp  TestWaylandInjector.cpp  test_Config.cpp
docs/: CNAME  index.html
logo/: generate_coral_icon.py
poc/coralV2/src/: Config.h  InjectorThread.cpp  InjectorThread.h  Logger.cpp  Makefile  Recorder.cpp  Recorder.h  RecorderThread.cpp  RecorderThread.h  TextEvent.h  TextInjector.cpp  TextInjector.h  Transcriber.cpp  Transcriber.h  TranscriberThread.cpp  TranscriberThread.h  concurrentQueue.h  config.json  main.cpp  stderrSilencer.h
poc/coralV2/test/: TestConcurrentQueue.cpp
poc/coralV2/tests/: test_Config.cpp  test_TestClass.cpp
poc/coralV3/: Makefile  coral_1.0.0_amd64.deb  pkg
poc/coralV3/conf/: config.json
poc/coralV3/scripts/: postinstall.sh
poc/coralV3/src/: AudioEvent.h  Config.cpp  Config.h  InjectorThread.cpp  InjectorThread.h  KeyDetector.h  Logger.h  Makefile  Recorder.cpp  Recorder.h  RecorderThread.cpp  TextInjector.cpp  TextUtils.cpp  TextUtils.h  Transcriber.cpp  Transcriber.h  TranscriberThread.cpp  TranscriberThread.h  coral.code-workspace  err.out  main.cpp  stdoutSilencer.cpp  stdoutSilencer.h
poc/coralV3/test/: TestInjectorThread.cpp  TestTranscriberThread.cpp
poc/coralV3/tests/: test_AudioEvent.cpp  test_TestClass.cpp
poc/vocalV1/: CMakeLists.txt  audio.cpp  audio.h  logging.cpp  logging.h  main_old.cpp  typer.cpp  typer.h  whisperInterface.cpp  whisperInterface.h
site/: index.html
